test_regress/t/t_implements_missing_bad.out
%Error: t/t_implements_missing_bad.v:12:1: Class 'Cls' implements 'Icls1' but is missing implementation for 'icf2' (IEEE 1800-2023 8.26)
   12 | class Cls implements Icls1;
      | ^~~~~
        t/t_implements_missing_bad.v:9:30: ... Location of interface class's function
    9 |    pure virtual function int icf2;
      |                              ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
